@@ -1,5 +1,6 @@
 Version 3.5.1-dev
 -----------------
+- Correctly use path_from_utf8.h in named_values.h and process_args.h.
 
 
 Version 3.5.0 [24 Aug 2022]
